# loam

./: .gitignore  .travis.yml  LICENSE  README.md  README.rst  justfile  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  docs.yml  release.yml  tox.yml
docs/: conf.py  getting-started.md  index.rst  requirements.txt
docs/sources/: firststeps.rst
docs/sources/api/: manager.rst  tools.rst
loam/: __init__.py  _internal.py  base.py  cli.py  collections.py  error.py  internal.py  manager.py  parsers.py  tools.py
scripts/: gen_ref_pages.py
tests/: conftest.py  test_base.py  test_cli.py  test_collections.py  test_compl_scripts.py  test_config_file.py  test_config_opts.py  test_parser.py  test_parsers.py
